Added Controller Logic for quiz app

--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,4 @@
 .well-image{width:100%;height: 162px;}
 .top-buffer{margin-top: 30px;}
+.answer{padding: 15px 20px;border: 1px solid #bbb;border-radius: 10px;}
+.answer:hover{cursor: pointer;}
