--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,6 @@
 .top-buffer{margin-top: 30px;}
 .answer{padding: 15px 20px;border: 1px solid #bbb;border-radius: 10px;}
 .answer:hover{cursor: pointer;}
+.image-answer{cursor: pointer;height: 350px;width: 100%;overflow: hidden;border-radius: 10px;margin-bottom: 20px;}
+.image-answer img{width: 100%;height: auto;}
+.image-selected{border:3px solid #56afdc;}
